[package]
name = 'grams'
version = '0.0.1'
edition = '2021'

[dependencies]
chrono = '0.4.23'
osascript = '0.3.0'
run_script = '0.10.0'
serde = '1.0.149'
serde_json = '1.0.89'
wry = '0.23.1'

[dependencies.livesplit-hotkey]
git = 'https://github.com/LiveSplit/livesplit-core.git'
package = 'livesplit-hotkey'
